added section woche 1

--- a/algd1/sweC1_zusammenfassung.tex
+++ b/algd1/sweC1_zusammenfassung.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt,a4paper,ngerman]{article}
-\usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{textcomp}
 \usepackage{babel}
 \date{16. September 2013}
 \author{Fabian~Kuenzli}
@@ -12,8 +12,131 @@
 \newpage
 \section{Woche 1}
 \subsection{Was ist Software?}
+
+Zwei Zitate:
+\begin{quote}
+''Software is arguably the world's most important industry. The presence of software has made possible many new businesses and is responsible for increased efficiencies in most traditional businesses.''
+
+\textit{Grady Booch (Communications of the ACM, M\"atz 2001)}
+
+\end{quote}
+
+\noindent Bei ''Software'' handelt es sich also nicht nur um das reine Produkt. Durch Software ist auch eine sehr grosse, (für die Schweiz) wichtige Industrie entstanden.
+
+\begin{quote}
+''Die Gesamtheit von Softwarekomponenten, die als Ganzes entwickelt, vertrieben, angewendet und gewartet werden.''
+
+\textit{R. Dumme, Software Engineering, 2000}
+
+\end{quote}
+
+\noindent \textbf{Bestandteile von Software sind}
+\begin{itemize}
+\item Computer-Programm(e)
+\item Installationsprogramm(e)
+\item Benutzerhandbuch
+\item Dokumentation
+\end{itemize}
+
+\noindent \textbf{Merkmale von Software}
+\begin{itemize}
+\item Software ist immateriell - die Qualität ist schwer zu beurteilen
+\item Software wird nicht durch physikalische Gesetze begrenzt
+\item Produkt der menschlichen Kreativität mit Gestaltungsfreiheit
+\item Software ist leicht und schnell änderbar (nicht nur positiv)
+\item Software wird meist von Menschen bedient
+\item Software hat eine längere Lebenszeit als Hardware
+\item Software unterliegt keinem Verschleiss
+\item Software altert, da sich die Umgebung verändert
+\item Software wird zunehmend komplexer
+\end{itemize}
 \subsection{Was ist Software Engineering?}
+\subsubsection{Ursprung}
+In den Urspr\"ungen der Softwareentwicklung handelte es sich bei ''Software'' um sehr kleine Werkzeuge mit geringer Komplexität. Ein Grossteil der Projektkosten floss in die Hardware, Software kostete zu diesem Zeitpunkt wenig.\newline
+Bald wurden die Möglichkeiten von Software erkannt und die Kosten für Software überstiegen die Kosten der Hardware. Es gab immer mehr gescheiterte Softwareprojekte, was Mitte der der Sechzigerjahre zur Software-Krise f\"uhrte. Die Industrie merkte, dass es so nicht weitergehen konnte und entwarf erste Ans\"ätze zum Software Engineering.
+\subsubsection{Definition}
+Das Institute of Electrical and Electronics Engineers IEEE definiert in ihrem Standard IEEE 610.12 ''Software Engineering'' wie folgt:
+\begin{quote}
+''Die Anwendung eines systematischen, disziplinierten und quantifizierbaren Ansatzes auf die Entwicklung, den Betrieb und die Wartung von Software, das heisst, die Anwendung der Prinzipien des Ingenieurwesens auf Software.''
+\end{quote}
+
+\noindent Bruegge gibt einen Rahmen, in welchem Software Engineering zum Tragen kommt:
+\begin{quote}
+A collection of techniques, methodologies, and tools that help with the production of
+\begin{itemize}
+\item high quality software systems - with a given budget\item before a given deadline\item while change occurs
+\end{itemize}
+\end{quote}
+
+\subsubsection{Rollen}
+In einem Softwareentwicklungsprojekt kann es die folgenden Rollen geben:
+\begin{itemize}
+\item Architekt\item Customer\item Developer
+\item Projekt Manager
+\item Quality Manager
+\item Requirements Engineer
+\item Sales Manager
+\item User Experience Designer
+\end{itemize}
+
+\subsubsection{Tätigkeiten}
+% todo
+
+
+
 \newpage
-\section{Ende}
-... und hier endet es.
+
+\section{Woche 2}
+
+\newpage
+
+\section{Woche 3}
+
+\newpage
+
+\section{Woche 4}
+
+\newpage
+
+\section{Woche 5}
+
+\newpage
+
+\section{Woche 6}
+
+\newpage
+
+\section{Woche 7}
+
+\newpage
+
+\section{Woche 8}
+
+\newpage
+
+\section{Woche 9}
+
+\newpage
+
+\section{Woche 10}
+
+\newpage
+
+\section{Woche 11}
+
+\newpage
+
+\section{Woche 12}
+
+\newpage
+
+\section{Woche 13}
+
+\newpage
+
+\section{Woche 14}
+
+\newpage
+
+\section{Woche 15}
 \end{document}
